removed packages not in use

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/coffee-favicon.png" />
+    <meta
+      id="vp"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>GASS.dev</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/coffee-favicon.png" />
-  <meta id="vp" name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>GASS - Engineer & Programmer</title>
-</head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
-<script>
-  window.onload = function () {
-    if (screen.width < 375) {
-      var mvp = document.getElementById('vp')
-      mvp.setAttribute('content', 'user-scalable=no,width=375')
-    }
-  }
-</script>
-
+  <script>
+    window.onload = function () {
+      if (screen.width < 375) {
+        var mvp = document.getElementById("vp");
+        mvp.setAttribute("content", "user-scalable=no,width=375");
+      }
+    };
+  </script>
 </html>
