--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GASS.dev</title>
+    <title>GASS</title>
   </head>
 
   <body>
